[package]
name = "mycpuassembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taplo = "0.11.0"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
